--- a/aposter/index.wxss
+++ b/aposter/index.wxss
@@ -47,9 +47,6 @@
 
 .poster {
 	display: block;
-	width: auto;
-	height: 755rpx;
-	margin: 0 atuo;
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
@@ -84,7 +81,7 @@
 	right: -50rpx;
 }
 
-.close-btn image {
+.close-btn-img {
 	display: block;
 	width: 50rpx;
 	height: 50rpx;
